tests/snapshots/repo_intelligence/repo_example_search_result.snap
---
source: packages/rust/crates/xiuxian-wendao/tests/support/repo_intelligence.rs
expression: value
---
{
  "examples": [],
  "repo_id": "example-sample"
}
