tests/snapshots/repo_intelligence/repo_module_search_cli_json.snap
---
source: packages/rust/crates/xiuxian-wendao/tests/integration/../support/repo_intelligence.rs
assertion_line: 32
expression: value
---
{
  "module_hits": [
    {
      "hierarchical_uri": "wendao://repo/unknown/cli-module/api/src:CliModulePkg.jl/repo:cli-module:module:CliModulePkg",
      "hierarchy": [
        "src",
        "CliModulePkg.jl"
      ],
      "implicit_backlink_items": [
        {
          "id": "repo:cli-module:doc:README.md",
          "kind": "documents",
          "path": "README.md",
          "title": "README.md"
        }
      ],
      "implicit_backlinks": [
        "repo:cli-module:doc:README.md"
      ],
      "module": {
        "module_id": "repo:cli-module:module:CliModulePkg",
        "path": "src/CliModulePkg.jl",
        "qualified_name": "CliModulePkg",
        "repo_id": "cli-module"
      },
      "projection_page_ids": [
        "repo:cli-module:projection:explanation:doc:repo:cli-module:doc:README.md",
        "repo:cli-module:projection:reference:module:repo:cli-module:module:CliModulePkg",
        "repo:cli-module:projection:reference:symbol:repo:cli-module:symbol:CliModulePkg.Problem",
        "repo:cli-module:projection:reference:symbol:repo:cli-module:symbol:CliModulePkg.solve"
      ],
      "rank": 1,
      "saliency_score": 0.5,
      "score": 0.25
    }
  ],
  "modules": [
    {
      "module_id": "repo:cli-module:module:CliModulePkg",
      "path": "src/CliModulePkg.jl",
      "qualified_name": "CliModulePkg",
      "repo_id": "cli-module"
    }
  ],
  "repo_id": "cli-module"
}
